# Vote_Checker

./: CMakeLists.txt  README.md  main.cpp
include/: Calculator.h
src/: Calculator.cpp
